Added input vertification

--- a/CS0010Lab5Something.ipynb
+++ b/CS0010Lab5Something.ipynb
@@ -2,37 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter your name:  Will\n",
-      "Please enter a number:  5\n"
+      "Please enter your name:  Steven\n",
+      "Please enter a number:  2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Will\n",
-      "Hello Will\n",
-      "Hello Will\n",
-      "Hello Will\n",
-      "Hello Will\n"
+      "Hello Steven\n",
+      "Hello Steven\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Please enter your name: \")\n",
-    "num = int(input(\"Please enter a number: \"))\n",
-    "\n",
+    "num = input(\"Please enter a number: \")\n",
     "i = 0\n",
-    "while i < num:\n",
-    "    print(\"Hello \" + name)\n",
-    "    i = i + 1\n"
+    "try:\n",
+    "    num = int(num)\n",
+    "    while i < num:\n",
+    "        print(\"Hello \" + name)\n",
+    "        i = i + 1\n",
+    "    \n",
+    "except:\n",
+    "    print(\"Your number input must be an integer\")\n",
+    "\n"
    ]
   },
   {
@@ -59,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
