Added License and Code of Conduct

--- a/CS0010Lab5Something.ipynb
+++ b/CS0010Lab5Something.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter your name:  Steven\n",
+      "Please enter your name:  Ste\n",
       "Please enter a number:  2\n"
      ]
     },
@@ -17,8 +17,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Steven\n",
-      "Hello Steven\n"
+      "Hello Ste\n",
+      "Hello Ste\n"
      ]
     }
    ],
@@ -27,22 +27,14 @@
     "num = input(\"Please enter a number: \")\n",
     "i = 0\n",
     "try:\n",
-    "    num = int(num)\n",
-    "    while i < num:\n",
+    "    userInput = int(num)\n",
+    "    while i < userInput:\n",
     "        print(\"Hello \" + name)\n",
     "        i = i + 1\n",
-    "    \n",
     "except:\n",
     "    print(\"Your number input must be an integer\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
