Fixed my mistake

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,38 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please enter your name:  Ste\n",
-      "Please enter a number:  2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Ste\n",
-      "Hello Ste\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Please enter your name: \")\n",
     "num = input(\"Please enter a number: \")\n",
     "i = 0\n",
-    "try:\n",
-    "    userInput = int(num)\n",
-    "    while i < userInput:\n",
-    "        print(\"Hello \" + name)\n",
-    "        i = i + 1\n",
-    "except:\n",
-    "    print(\"Your number input must be an integer\")\n",
-    "\n"
+    "\n",
+    "while i < num:\n",
+    "    "
    ]
   }
  ],
