--- a/code.ipynb
+++ b/code.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter your name:  Steve\n",
+      "Please enter an integer number:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steve\n",
+      "Steve\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Please enter your name: \")\n",
-    "num = input(\"Please enter a number: \")\n",
+    "num = input(\"Please enter an integer number: \")\n",
     "i = 0\n",
     "\n",
-    "while i < num:\n",
-    "    "
+    "try:\n",
+    "    num = int(num)\n",
+    "    while i < num:\n",
+    "        print(name)\n",
+    "        i = i+1\n",
+    "except:\n",
+    "    print(\"You must enter an integer for the number\")"
    ]
   }
  ],
